// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/ChatInputField renders correctly 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      [
        {
          "flex": 1,
          "flexDirection": "column",
          "marginRight": 3,
          "minWidth": undefined,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 18,
        },
        {
          "minHeight": 120,
        },
        [
          {
            "alignItems": "center",
            "borderWidth": undefined,
            "marginVertical": 0,
            "maxHeight": 294,
            "minHeight": 57,
            "paddingVertical": 12,
            "width": "100%",
          },
          undefined,
        ],
      ]
    }
  >
    <TextInput
      accessibilityLabel="chatInputField"
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          [
            {
              "paddingTop": 0,
            },
            undefined,
          ],
        ]
      }
      testID="TextInput"
      value="value"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatInputField renders correctly focused/blur 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      [
        {
          "flex": 1,
          "flexDirection": "column",
          "marginRight": 3,
          "minWidth": undefined,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "backgroundColor": "#EEEFF1",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 18,
        },
        {
          "minHeight": 120,
        },
        [
          {
            "alignItems": "center",
            "borderWidth": undefined,
            "marginVertical": 0,
            "maxHeight": 294,
            "minHeight": 57,
            "paddingVertical": 12,
            "width": "100%",
          },
          undefined,
        ],
      ]
    }
  >
    <TextInput
      accessibilityLabel="chatInputField"
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          [
            {
              "paddingTop": 0,
            },
            undefined,
          ],
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatInputField renders correctly focused/blur 2`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      [
        {
          "flex": 1,
          "flexDirection": "column",
          "marginRight": 3,
          "minWidth": undefined,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 18,
        },
        {
          "minHeight": 120,
        },
        [
          {
            "alignItems": "center",
            "borderWidth": undefined,
            "marginVertical": 0,
            "maxHeight": 294,
            "minHeight": 57,
            "paddingVertical": 12,
            "width": "100%",
          },
          undefined,
        ],
      ]
    }
  >
    <TextInput
      accessibilityLabel="chatInputField"
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          [
            {
              "paddingTop": 0,
            },
            undefined,
          ],
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatInputField renders correctly with props 1`] = `
<View
  style={
    [
      {
        "minWidth": 195,
      },
      [
        {
          "flex": 1,
          "flexDirection": "column",
          "marginRight": 3,
          "minWidth": undefined,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 12,
          "paddingLeft": 27,
          "paddingRight": 24,
          "paddingVertical": 18,
        },
        {
          "minHeight": 120,
        },
        [
          {
            "alignItems": "center",
            "borderWidth": undefined,
            "marginVertical": 0,
            "maxHeight": 294,
            "minHeight": 57,
            "paddingVertical": 12,
            "width": "100%",
          },
          {
            "width": 200,
          },
        ],
      ]
    }
  >
    <TextInput
      accessibilityLabel="chatInputField"
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "flex": 1,
            "padding": 0,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
            "minHeight": 30,
          },
          [
            {
              "paddingTop": 0,
            },
            {
              "paddingTop": 20,
            },
          ],
        ]
      }
      testID="TextInput"
      value="value"
    />
  </View>
</View>
`;
